# zero2prod

./: Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: audit.yml  ci.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20260102161202_create_subscriptions_table.sql  20260324152053_add_status_to_subscription.sql  20260325204109_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
